Tue May 15 18:22:44 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/termgenerator_internal.cc: Sort out stemming of
	  initials.

Tue May 15 18:04:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/termgentest.cc: Add some more tests, and rework the array
	  of tests so that there's just a single string holding any options
	  we want to set for the following tests.

Tue May 15 16:49:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/Makefile.am,tests/termgentest.cc: Add new test file, for
	  testing the term generator.  Only has a single test so far.

Tue May 15 16:20:20 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: Make single parameter ctor explicit.

Tue May 15 16:00:24 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/termgenerator_internal.cc: Add special handling for
	  acronyms/initialisms, so I.B.M -> term ibm, etc.

Tue May 15 14:07:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/termgenerator.h,queryparser/termgenerator.cc: Add
	  a set_termpos() method, too.

Tue May 15 13:54:34 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Document the issue of the monotonic
	  docid counter wrapping around.

Tue May 15 10:58:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/termgenerator.h,queryparser/termgenerator.cc: Add
	  get_termpos() method to get the current value of the termpos.
	  Makes it easier to integrate with different term generators.

Tue May 15 03:44:50 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,queryparser/termgenerator_internal.cc:
	  Include '.', ',', and a few other characters in terms if they are
	  between two decimal digits.
	* queryparser/termgenerator_internal.cc: Don't stem terms which start
	  with a number.
	* tests/queryparsertest.cc: Update results for real world queries to
	  match new results (better in every case but one!)
